--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="logo">
             <ul>
-                <li> <a href="">☎<</a> </li>
+                <li> <a href="#">☎</a> </li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tweets.html">Tweets</a></li>
             </ul>
