--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -61,13 +61,13 @@
                 </div>
             </section>
     </div>
-    <section>
-        <div>
-            <img src="./images/Bitmap.png" alt="image">
+    <section class="presenter-container">
+        <div class="presenter-img-wrapper">
+            <img src="./images/5.png" alt="image" class="presenter-img">
         </div>
-        <div>
-            <blockquote>Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
-            <h3>NAME</h3>
+        <div class="presenter-info">
+            <blockquote>«Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
+            <h3>Person Name</h3>
             <P>weather presenter</P>
         </div>
     </section>
