footer section css content added

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 
@@ -228,15 +229,19 @@
 </main>
 <footer>
     <section>
-        <div>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
-            <div>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
+        <div class="footer">
+            <div class="footer-content">
+                <img src="./images/logo.png" alt="logo">
+                <div class="media-icon">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
             </div>
+            <p>©smileschool 2020</p>
         </div>
-        <p>©smileschool 2020</p>
+        
     </section>
 </footer>
 </body>
