1-index and 1-style files added

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -10,6 +10,10 @@
     <div class="hero">
         <header class="hero-header">
             <img src="images/logo_headphones.png" alt="">
+
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger">&#9776;</label>
+
             <div class="nav-links" >
                 <ul>
                     <li> <a href="#">what we do</a></li>
